update classes of elements

--- a/index.html
+++ b/index.html
@@ -9,46 +9,46 @@
 </head>
 <body>
     <header class="header">
-        <div class="container flex header-container">
-            <a href="" class="header-logo">
+        <div class="container flex header__container">
+            <a href="" class="header__logo">
                 <img src="img/logo.svg" class="header-logo" alt="logo">
             </a>
 
-            <nav class="header-nav">
-                <ul class="list-reset header-list flex">
-                    <li class="header-list-item">
-                        <a href="#home" class="header-link">
+            <nav class="nav header__nav" title="Главное меню">
+                <ul class="nav__list list-reset flex">
+                    <li class="nav__item">
+                        <a href="#home" class="nav__link">
                             Home
                         </a>
                     </li>
-                    <li class="header-list-item">
-                        <a href="#services" class="header-link">
+                    <li class="nav__item">
+                        <a href="#services" class="nav__link">
                             Services
                         </a>
                     </li>
-                    <li class="header-list-item">
-                        <a href="#articles" class="header-link">
+                    <li class="nav__item">
+                        <a href="#articles" class="nav__link">
                             Articles
                         </a>
                     </li>
-                    <li class="header-list-item">
-                        <a href="#clients" class="header-link">
+                    <li class="nav__item">
+                        <a href="#clients" class="nav__link">
                             Clients
                         </a>
                     </li>
-                    <li class="header-list-item">
-                        <a href="#contacts" class="header-link">
+                    <li class="nav__item">
+                        <a href="#contacts" class="nav__link">
                             Contacts
                         </a>
                     </li>
-                    <li class="header-list-item">
-                        <a href="#join-us" class="header-link">
+                    <li class="nav__item">
+                        <a href="#join-us" class="nav__link">
                             Join us
                         </a>
                     </li>
                 </ul>
             </nav>
-            <button class="btn header-btn btn-reset">
+            <button class="btn header__btn btn-reset">
                 Free trial
             </button>
         </div>
@@ -57,18 +57,18 @@
     <main class="main">
         <section id="home" class="home">
             <div class="container">
-                <div class="home-content flex">
-                    <h1 class="home-title">
+                <div class="home__content flex">
+                    <h1 class="home__title">
                         This is&nbsp;simply a&nbsp;smarter way to&nbsp;make your legal online
                     </h1>
-                    <p class="home-descr">
+                    <p class="home__descr">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut&nbsp;laoreet dolore.
                     </p>
-                    <div class="home-wrapper flex">
-                        <button class="btn home-btn btn-reset">
+                    <div class="home__wrapper flex">
+                        <button class="btn home__btn btn-reset">
                             FREE 30&nbsp;DAY TRIAL
                         </button>
-                        <span class="home-secure">
+                        <span class="home__secure">
                             SSL secured connection
                         </span>
                     </div>
@@ -364,19 +364,19 @@
 				</small>
 			</div>
 			<div class="footer-right flex">
-				<nav class="footer-nav">
-					<ul class="list-reset footer-list flex">
-						<li class="footer-item">
-							<a href="#" target="_blank" class="footer-link">About Us</a>
+				<nav class="nav footer__nav" title="Второстепенное меню">
+					<ul class="list-reset nav__list flex">
+						<li class="nav__item">
+							<a href="#" target="_blank" class="nav__link">About Us</a>
 						</li>
-						<li class="footer-item">
-							<a href="#" target="_blank" class="footer-link">Contact Us</a>
+						<li class="nav__item">
+							<a href="#" target="_blank" class="nav__link">Contact Us</a>
 						</li>
-						<li class="footer-item">
-							<a href="#" target="_blank" class="footer-link">Privacy Policy</a>
+						<li class="nav__item">
+							<a href="#" target="_blank" class="nav__link">Privacy Policy</a>
 						</li>
-						<li class="footer-item">
-							<a href="#" target="_blank" class="footer-link">Terms Condition</a>
+						<li class="nav__item">
+							<a href="#" target="_blank" class="nav__link">Terms Condition</a>
 						</li>
 					</ul>
 				</nav>
